se agrega librería principal bootstrap

--- a/sacpyc/sacpyc/templates/sacpyc/base.html
+++ b/sacpyc/sacpyc/templates/sacpyc/base.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">	
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="/static/sacpyc/css/bootstrap.min.css" rel="stylesheet">
 	<title>{%block titulo%}{%endblock%}</title>
 </head>
 <body>
-	{%block header%}{%endblock%}
-	{%block body%}{%endblock%}
-	{%block footer%}{%endblock%}
+	{%block header%}
+	{%endblock%}
+	{%block body%}
+	{%endblock%}
+	{%block footer%}
+	{%endblock%}
 </body>
+<footer>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="/static/sacpyc/js/bootstrap.min.js"></script>
+</footer>
 </html>
