--- a/sacpyc/sacpyc/templates/sacpyc/home.html
+++ b/sacpyc/sacpyc/templates/sacpyc/home.html
@@ -1,5 +1,83 @@
 {%extends "sacpyc/base.html"%}
 {%block titulo%}SACPYC{%endblock%}
 {%block body%}
-	<h1>Hola Mundo</h1>
+	<div id="coffe-break" class="row">
+		<h2>Coffe-Breaks</h2>
+		<div class="row">
+			<img src="/static/sacpyc/img/coffe.jpg" class="col-xs-12 imgPag">
+		</div>
+		<p></p>
+		<div class="panel panel-default info1 contenido-info">
+			<p class="text-justify">Coffee breaks diseñados especialmente para empresas. Tenemos capacidad para atender hasta 500 personas. Ofrecemos diferentes opciones para todo tipo de presupuestos e incluimos alternativas saludables con fruta de la estación, bocadillos light y jugos naturales.<br> Nos preocupamos de cada detalle de principio a fin. Montamos y desmontamos por nuestra cuenta y nos hacemos cargo de la decoración del lugar para que ustedes solo se preocupen de pasarlo bien y compartir. Deja en nuestras manos todos los Coffee Breaks que tu empresa necesite, no te vas a arrepentir. Cotiza con nosotros.</p>
+		</div>
+	</div>
+	<div id="catering" class="row">
+		<h2>Catering</h2>
+		<div class="row">
+			<img src="/static/sacpyc/img/cater.jpg" class="col-xs-12 imgPag">
+		</div>
+		<p></p>
+		<div class="panel panel-default info1 contenido-info">
+			<p class="text-justify">
+			¿Tienes algún evento y no sabes cómo solucionar el tema de la comida? Quizás se trata de la grabación de una película o comercial, tal vez es sólo una maratón de trabajo extra en la oficina. Apostamos que estás cansado de las pizzas y la comida chatarra. Llámanos! Podemos preparar comida casera calentita, ricas y contundentes ensaladas o sándwiches gourmet. También contamos con servicio de mantención con los más deliciosos snacks.<br><br><br>
+			</p>
+		</div>
+	</div>
+	<div id="cumpleano" class="row">
+		<h2>Cumpleaños</h2>
+		<div class="row">
+			<img src="/static/sacpyc/img/cumplecenas.gif" class="col-xs-12 imgPag">
+		</div>
+			<p></p>
+		<div class="panel panel-default info1 contenido-info">
+			<p class="text-justify">
+			¿Estás de cumpleaños?. Te proponemos que lo pases bien con tus visitas y dejes que nosotros nos ocupemos de la comida. Organizamos cumpleaños y armamos un menú personalizado en base a tus requerimientos y tus gustos. Incluso podemos encargarnos de la torta y la decoración si lo prefieres.
+			<br><br><br><br><br>
+			</p>
+		</div>
+	</div>
+	<div id="cena" class="row">
+		<h2>Cenas</h2>
+		<div class="row">
+			<img src="/static/sacpyc/img/cumplecenas.gif" class="col-xs-12 imgPag">
+		</div>
+		<p></p>
+		<div class="panel panel-default info1 contenido-info">
+			<p class="text-justify">
+			Quizás tienes invitados a comer.Te proponemos que lo pases bien con tus visitas y dejes que nosotros nos ocupemos de la comida. Organizamos cocktails y cenas privadas para todos los gustos y edades. Armamos un menú personalizado en base a tus requerimientos y tus gustos.<br><br><br><br><br>
+			</p>
+		</div>
+	</div>
+	<div id="matrimonio" class="row">
+		<h2>Matrimonios</h2>
+		<div class="row">
+			<img src="/static/sacpyc/img/matrimonio.gif" class="col-xs-12 imgPag">
+		</div>
+		<p></p>
+		<div class="panel panel-default info1 contenido-info">
+			<p class="text-justify">
+			¿Vas a casarte y quieres algo distinto, personalizado y con un toque original?. Habla con nosotros! Realizamos cocktails y cenas de matrimonio, somos flexibles, creativos y proactivos y sabremos aconsejarte para que ese día todo esté perfecto.<br><br><br><br><br><br>
+			</p>
+		</div>
+	</div>
+{%endblock%}
+{%block menuIzq%}
+	<div id="menu-lateral" class="panel fondo">
+		<p></p>
+		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="menuLat1()">Coffe Breaks</button>
+		<p></p>
+		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="menuLat2()">Catering</button>
+		<p></p>
+		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="menuLat3()">Cumpleaños</button>
+		<p></p>
+		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="menuLat4()">Cenas</button>
+		<p></p>
+		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="menuLat5()">Matrimonios</button>
+	</div>
+{%endblock%}
+{%block colDer%}
+	<h2>aquí pueden ir datos qlos</h2>
+{%endblock%}
+{%block js%}
+	<script type="text/javascript" src="/static/sacpyc/js/index.js"></script>
 {%endblock%}
