--- a/sacpyc/sacpyc/templates/sacpyc/home.html
+++ b/sacpyc/sacpyc/templates/sacpyc/home.html
@@ -1,6 +1,7 @@
 {%extends "sacpyc/base.html"%}
 {%block titulo%}SACPYC{%endblock%}
 {%block body%}
+	<a href="/contactos/mierda/">contacto</a>
 	<div id="coffe-break" class="row">
 		<h2>Coffe-Breaks</h2>
 		<div class="row">
