--- a/sacpyc/Cotizar/templates/Cotizar/cotizar.html
+++ b/sacpyc/Cotizar/templates/Cotizar/cotizar.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>chupa</title>
+	<title>PICO</title>
 </head>
 <body>
-el pcio :D
+AIODUQASJO
 </body>
 </html>
