--- a/sacpyc/sacpyc/templates/sacpyc/base.html
+++ b/sacpyc/sacpyc/templates/sacpyc/base.html
@@ -34,7 +34,7 @@
 							<a id="np" type="button" class="btn btn-default frente">Nuestros Productos</a>
 						</div>
 						<div class="btn-group">
-							<a id="cn" type="button" class="btn btn-default frente" href="sacpyc/cotizar.html">Cotiza con Nosotros</a>
+							<a id="cn"type="button" class="btn btn-default frente">Cotiza con Nosotros</a>
 						</div>
 						<div class="btn-group">
 							<a id="cont" type="button" class="btn btn-default frente">Contáctenos</a>
