--- a/sacpyc/sacpyc/templates/sacpyc/home.html
+++ b/sacpyc/sacpyc/templates/sacpyc/home.html
@@ -65,15 +65,15 @@
 {%block menuIzq%}
 	<div id="menu-lateral" class="panel fondo">
 		<p></p>
-		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="menuLat1()">Coffe Breaks</button>
+		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="botonMenu('coffe-break')">Coffe Breaks</button>
 		<p></p>
-		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="menuLat2()">Catering</button>
+		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="botonMenu('catering')">Catering</button>
 		<p></p>
-		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="menuLat3()">Cumpleaños</button>
+		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="botonMenu('cumpleano')">Cumpleaños</button>
 		<p></p>
-		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="menuLat4()">Cenas</button>
+		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="botonMenu('cena')">Cenas</button>
 		<p></p>
-		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="menuLat5()">Matrimonios</button>
+		<button type="button" class="btn-lat btn btn-default btn-lg frente" onclick="botonMenu('matrimonio')">Matrimonios</button>
 	</div>
 {%endblock%}
 {%block colDer%}
