--- a/sacpyc/sacpyc/templates/sacpyc/base.html
+++ b/sacpyc/sacpyc/templates/sacpyc/base.html
@@ -14,7 +14,6 @@
 	<div id="page-wrap">
 		<div id="header" class="row fondo">
 			<div id="banner-izq" = class="col-xs-3"></div>
-			<!--<img id="banner" class="col-xs-3" src="/static/sacpyc/img/logo2.png">-->
 			<div id="banner-der" class="col-xs-3"></div>
 			{%block header%}
 			{%endblock%}
@@ -31,10 +30,10 @@
 				<div id="menu" class="btn-group btn-group-justified btn-group-lg">
 					<div id ="menu" class="btn-group btn-group-justified btn-group-lg">
 						<div class="btn-group">
-							<a id="np" type="button" class="btn btn-default frente">Nuestros Productos</a>
+							<a id="np" type="button" class="btn btn-default frente" href="/">Nuestros Productos</a>
 						</div>
 						<div class="btn-group">
-							<a id="cn"type="button" class="btn btn-default frente">Cotiza con Nosotros</a>
+							<a id="cn"type="button" class="btn btn-default frente" href="/Cotizar/Cotizar">Cotiza con Nosotros</a>
 						</div>
 						<div class="btn-group">
 							<a id="cont" type="button" class="btn btn-default frente">Contáctenos</a>
@@ -66,6 +65,7 @@
 <footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="/static/sacpyc/js/bootstrap.min.js"></script>
-	{%block js%}{%endblock%}
+	{%block js%}
+	{%endblock%}
 </footer>
 </html>
