--- a/sacpyc/Cotizar/templates/Cotizar/cotizarCat.html
+++ b/sacpyc/Cotizar/templates/Cotizar/cotizarCat.html
@@ -10,6 +10,11 @@
     {{dpto}}<br>
     {{dir}}<br>
     {{fecha}}<br>
+    {{hora}}<br>
     {{invitados}}<br>
     {{duracion}}<br>
+    {self.context}
+    <div class="col-xs-3" style="padding-left:0;">
+					<a href="javascript:history.back()" class="btn-lat btn btn-default frente">volver</a>
+				</div>
 {%endblock%}
