Agregue el template de contacto

--- a/sacpyc/sacpyc/templates/sacpyc/base.html
+++ b/sacpyc/sacpyc/templates/sacpyc/base.html
@@ -36,7 +36,7 @@
 							<a id="cn"type="button" class="btn btn-default frente" href="/Cotizar/Cotizar">Cotiza con Nosotros</a>
 						</div>
 						<div class="btn-group">
-							<a id="cont" type="button" class="btn btn-default frente">Contáctenos</a>
+							<a id="cont" type="button" class="btn btn-default frente" href="/Contacto/Contacto">Contáctenos</a>
 						</div>
 					</div>
 				</div>
