--- a/sacpyc/contacto/templates/contacto/contacto.html
+++ b/sacpyc/contacto/templates/contacto/contacto.html
@@ -32,9 +32,7 @@
             <h4 class="modal-title">Mensaje enviado con exito!</h4>
           </div>
           <div class="modal-body">
-
-
-            <p  id="salida">Revisaremos sus comentarios y responderemos sus dudas a la brevedad.</p>
+            <p  id="salida">Revisaremos sus comentarios y responderemos sus dudas a la brevedad. </p> {{nombre}}
           </div>
           <div class="modal-footer">
             <button id="boton-home" type="button" class="btn btn-default" data-dismiss="modal">Volver al Inicio</button>
