agregados app admin, falta conectarlos

--- a/sacpyc/sacpyc/templates/sacpyc/base2.html
+++ b/sacpyc/sacpyc/templates/sacpyc/base2.html
@@ -38,19 +38,19 @@
 				<div id="menu" class="btn-group btn-group-justified btn-group-lg">
 					<div id ="menu" class="btn-group btn-group-justified btn-group-lg">
 						<div class="btn-group">
-							<a id="ag" type="button" class="btn btn-default frente" href="">Agenda</a>
+							<a id="ag" type="button" class="btn btn-default frente" href="/Agenda/Agenda">Agenda</a>
 						</div>
 						<div class="btn-group">
-							<a id="cot"type="button" class="btn btn-default frente" href="">Cotizaciones</a>
+							<a id="cot"type="button" class="btn btn-default frente" href="/CotizarAd/CotizarAd">Cotizaciones</a>
 						</div>
 						<div class="btn-group">
 							<a id="te" type="button" class="btn btn-default frente" href="">Tipo Evento</a>
 						</div>
 						<div class="btn-group">
-							<a id="comp" type="button" class="btn btn-default frente" href="">Compras</a>
+							<a id="comp" type="button" class="btn btn-default frente" href="/Compras/Compras">Compras</a>
 						</div>
 						<div class="btn-group">
-							<a id="gar" type="button" class="btn btn-default frente" href="">Garzones</a>
+							<a id="gar" type="button" class="btn btn-default frente" href="/Garzones/Garzones">Garzones</a>
 						</div>
 						<div class="btn-group">
 							<a id="pro" type="button" class="btn btn-default frente" href="">Proveedores</a>
