--- a/sacpyc/sacpyc/templates/sacpyc/base2.html
+++ b/sacpyc/sacpyc/templates/sacpyc/base2.html
@@ -44,7 +44,7 @@
 							<a id="cot"type="button" class="btn btn-default frente" href="/CotizarAd/CotizarAd">Cotizaciones</a>
 						</div>
 						<div class="btn-group">
-							<a id="te" type="button" class="btn btn-default frente" href="">Tipo Evento</a>
+							<a id="te" type="button" class="btn btn-default frente" href="/TipoEvento/TipoEvento">Tipo Evento</a>
 						</div>
 						<div class="btn-group">
 							<a id="comp" type="button" class="btn btn-default frente" href="/Compras/Compras">Compras</a>
@@ -53,13 +53,13 @@
 							<a id="gar" type="button" class="btn btn-default frente" href="/Garzones/Garzones">Garzones</a>
 						</div>
 						<div class="btn-group">
-							<a id="pro" type="button" class="btn btn-default frente" href="">Proveedores</a>
+							<a id="pro" type="button" class="btn btn-default frente" href="/Proveedores/Proveedores">Proveedores</a>
 						</div>
 						<div class="btn-group">
-							<a id="not" type="button" class="btn btn-default frente" href="">Notificaciones</a>
+							<a id="not" type="button" class="btn btn-default frente" href="/Notificaciones/Notificaciones">Notificaciones</a>
 						</div>
 						<div class="btn-group">
-							<a id="menu" type="button" class="btn btn-default frente" href="">Menú</a>
+							<a id="men" type="button" class="btn btn-default frente" href="/Menu/Menu">Menú</a>
 						</div>
 					</div>
 				</div>
