--- a/sacpyc/CotizarAd/templates/cotizarad/cotizarad.html
+++ b/sacpyc/CotizarAd/templates/cotizarad/cotizarad.html
@@ -1,11 +1,25 @@
 {%extends "sacpyc/base2.html"%}
 {%block body%}
+
 				<div class="row">
-	    		<div class="col-xs-3"></div>
-	    		<h3>Solicitudes Pendientes:</h3>
+	    		<div class="col-xs-12">
+	    			<div class="col-xs-6">
+		    			<h3>Solicitudes Pendietes:</h3>
+		    			<p>solicitud 1</p>
+		    			<p>Cotización; Fecha; Cliente</p>
+		    			<p>solicitud 2</p>
+		    			<h3>Cotizaciones enviadas:</h3>
+	    				<p>Cliente; fecha</p>
+	    			</div>
+	    			<div class="col-xs-6" >
+						<input type="submit" name="siguiente1" class="btn-lat btn btn-default frente" style="margin-top:40%;" value="Generar Cotización">
+	    			</div>
+	    			
+	    			
+	    		</div>
 	    		
-				<div class="col-xs-3"></div>
-				<h3>Cotizaciones enviadas:</h3>
+				
+				
 			</div>
 
 {%endblock%}
